; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/intel/ixgbe/extr_ixgbe_x550.c_ixgbe_read_pe.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/intel/ixgbe/extr_ixgbe_x550.c_ixgbe_read_pe.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ixgbe_hw = type { i32 }

@IXGBE_PE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [37 x i8] c"port expander access failed with %d\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.ixgbe_hw*, i32, i32*)* @ixgbe_read_pe to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @ixgbe_read_pe(%struct.ixgbe_hw* %0, i32 %1, i32* %2) #0 {
  %4 = alloca %struct.ixgbe_hw*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i64, align 8
  store %struct.ixgbe_hw* %0, %struct.ixgbe_hw** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32* %2, i32** %6, align 8
  %8 = load %struct.ixgbe_hw*, %struct.ixgbe_hw** %4, align 8
  %9 = load i32, i32* %5, align 4
  %10 = load i32, i32* @IXGBE_PE, align 4
  %11 = load i32*, i32** %6, align 8
  %12 = call i64 @ixgbe_read_i2c_byte_generic_unlocked(%struct.ixgbe_hw* %8, i32 %9, i32 %10, i32* %11)
  store i64 %12, i64* %7, align 8
  %13 = load i64, i64* %7, align 8
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %19

15:                                               ; preds = %3
  %16 = load %struct.ixgbe_hw*, %struct.ixgbe_hw** %4, align 8
  %17 = load i64, i64* %7, align 8
  %18 = call i32 @hw_err(%struct.ixgbe_hw* %16, i8* getelementptr inbounds ([37 x i8], [37 x i8]* @.str, i64 0, i64 0), i64 %17)
  br label %19

19:                                               ; preds = %15, %3
  %20 = load i64, i64* %7, align 8
  ret i64 %20
}

declare dso_local i64 @ixgbe_read_i2c_byte_generic_unlocked(%struct.ixgbe_hw*, i32, i32, i32*) #1

declare dso_local i32 @hw_err(%struct.ixgbe_hw*, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
